<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background_login"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/lineartop"
        android:gravity="center"
        android:padding="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher"
            android:padding="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mall Test"
            android:id="@+id/textView4"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lineartop"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="20dp"
        android:background="@color/white">


        <com.mgomez.cuponesmemoria.views.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user"
            android:layout_margin="10dp"
            app:floatingHint="@string/email"
            android:lines="1"
            android:layout_gravity="center_horizontal" />

        <com.mgomez.cuponesmemoria.views.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:floatingHint="@string/password"
            android:lines="1"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/sign_in"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_sign_in_background"
            android:layout_gravity="center_horizontal"
            android:onClick="login"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_login"
            android:id="@+id/register"
            android:layout_gravity="center_horizontal"
            style="@style/TextButton"/>
    </LinearLayout>
</RelativeLayout>

